--- a/1번 문제.md
+++ b/1번 문제.md
@@ -1,3 +1,5 @@
+(1) 동시에 같은 DB Table row 를 업데이트 하는 상황을 방어하기 위해 어떻게 개발하실 건지 설명해주세요.
+
 Atomic Operation: \
 transaction을 이용하여 하나의 작업을 하나의 작은 단위로 쪼개서 코드 안에서 필요한 부분만 transaction 처리를 하도록 구현합니다. \
 transaction이 같은 row를 수정해도 최종적으로는 한개의 transaction만 row를 성공적으로 수정할 수 있도록 보장됩니다.
