--- a/2번 문제.md
+++ b/2번 문제.md
@@ -1,1 +1,9 @@
 (2) TCP 와 UDP 의 차이를 작성해주세요.
+
+TCP는 전송 제어 프로토콜이라는 이름처럼 신뢰성이 높은 프로토콜입니다. 
+데이터를 보내기 전에 먼저 연결을 맺는데, 상대방의 응답이 없을 경우 다시 시도합니다. 
+실제 데이터 전송에서는 각 패킷마다 순서대로 번호를 부여하고, 상대방으로부터 ACK(수신 확인) 패킷을 받으면 다음 패킷을 보내는 방식을 취해 패킷의 유실을 최소화하고 데이터 전송의 정확성을 보장합니다. 하지만 이에 비례하여 오버헤드가 크기 때문에 빠른 속도가 요구되는 경우에는 적합하지 않습니다. 
+
+UDP는 유사한 용도로 사용되지만, 신뢰성이 TCP에 비해 약한 프로토콜입니다. 데이터를 보내기 전에 연결 설정이 필요하지 않기 때문에 TCP보다 전송 속도가 더 빠르고 오버헤드가 적습니다. 
+그러나 상대방이 패킷 수신 여부를 확인하지 않기 때문에 패킷 유실률이 높아질 수 있습니다. 따라서 데이터 유실에 큰 문제가 없는 스트리밍 등의 기능에서 사용됩니다. 
+TCP는 신뢰성과 정확성을 보장하는 데 적합하고, UDP는 빠른 전송 속도와 오버헤드가 적은 것이 요구되는 경우에 적합합니다. 또한, UDP는 오류를 최소화해야 하는 애플리케이션에서는 적합하지 않습니다.
