--- a/3번 문제.md
+++ b/3번 문제.md
@@ -1,1 +1,16 @@
 (3) 웹 브라우저에 네이버 를 검색하고 화면에 네이버 화면이 출력이 될 때 까지 내부적으로 어떤 동작들이 수행이 되는지 설명해주세요.
+
+웹 브라우저에 네이버를 검색하고 화면에 네이버 화면이 출력되기까지 내부적으로 아래와 같은 동작들이 수행됩니다.
+
+1. 웹 브라우저에서 사용자가 입력한 "네이버" 검색어를 기반으로 DNS(Domain Name System) 서버에 요청을 보냅니다.
+2. DNS 서버는 "네이버"라는 도메인 이름을 IP 주소로 변환한 후 이를 반환합니다.
+3. 웹 브라우저는 서버와 TCP/IP 세션을 설정하기 위해 서버로 SYN 패킷을 보냅니다.
+4. 서버는 수신한 SYN 패킷에 대한 ACK 패킷을 보냅니다.
+5. 웹 브라우저에서 HTTP(HyperText Transfer Protocol) 요청 메시지를 서버로 보냅니다. 이때 요청 메시지는 클라이언트(웹 브라우저)에서 서버로 전송되는 것입니다.
+6. 서버에서는 HTTP 응답 메시지를 생성하여 이를 클라이언트로 전송합니다.
+7. 클라이언트는 수신한 HTTP 응답 메시지를 해석하여 웹 페이지를 표시하기 위한 HTML(HyperText Markup Language) 문서를 추출합니다.
+8. 웹 브라우저에서 HTML 문서를 해석하고, 필요한 경우 CSS(Cascading Style Sheets) 스타일 시트 및 JavaScript를 다운로드합니다.
+9. 웹 브라우저에서 HTML 문서에 포함된 자원(이미지, 동영상 등)을 다운로드합니다.
+10. 웹 브라우저에서 HTML 문서와 이에 포함된 자원을 사용하여 최종적으로 화면에 네이버 홈페이지를 출력합니다.
+
+따라서, 이러한 과정을 통해 사용자는 네이버 홈페이지를 볼 수 있게 됩니다.
