--- a/4번 문제.md
+++ b/4번 문제.md
@@ -1,7 +1,6 @@
 (4) 본인이 주력으로 사용하는 언어에서 설계적 결함 한 가지를 작성해주세요.
 
-Python에서는 모든 변수가 런타임에 결정되는 동적 타입 언어입니다. 이는 코드를 빠르게 작성하고 디버그하기 쉽게 만드는 장점이 있습니다. \ 
-
+Python에서는 모든 변수가 런타임에 결정되는 동적 타입 언어입니다. 이는 코드를 빠르게 작성하고 디버그하기 쉽게 만드는 장점이 있습니다. 
 그러나 이러한 장점으로 인해 변수와 객체의 타입이 명확하게 정해지지 않기 때문에 발생할 수 있는 오류가 많습니다. \
 예를 들어, 동적 타이핑 중 변수에 잘못된 타입의 값이 할당되는 경우에는 런타임 오류가 발생합니다. \
 이 경우, 오류를 방지하기 위해 정적 타이핑을 사용해야 합니다. 하지만 Python은 타입 어노테이션(Type Annotation)을 제공하여 변수와 함수의 파라미터 등에 타입 정보를 명시할 수 있습니다. \
